--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,9 +1,9 @@
 development:
-    bucket: testifyapp.com
+    bucket: testifyappdev
     access_key_id: AKIAITU6B4YWG5JWPNGA
     secret_access_key: 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
     
 production:
-    bucket: testifyapp.com
+    bucket: testifyapp
     access_key_id: AKIAITU6B4YWG5JWPNGA
     secret_access_key: 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
